--- a/stylus/content.styl
+++ b/stylus/content.styl
@@ -18,11 +18,12 @@
     position relative
     box-shadow 0 5px 15px rgba( black, 0.025 )
     h1
-      font-size 30px
+      font-size 25px
       margin 0
       line-height 75px
       font-family $font
       padding 0 40px
+      font-weight 100
     .toolbar
       position absolute
       right 40px
@@ -53,7 +54,6 @@
         display inline-block
         padding 15px 0 15px 30px
         margin 0 0 0 30px
-        box-shadow -1px 0 hsl( 0, 0, 30 )
         i
           display inline-block
         input
